# file_processor-api

./: .gitignore  Cargo.toml  README.MD  README.md  deny.toml
.github/workflows/: ci.yml  docker_ci  old_ci
CI/: Dockerfile
documentation/: ApiConnector.md  ErrorHandler.md
fuzz/: Cargo.toml
src/: lib.rs  main.rs
src/api_connector/: mod.rs  mtls.rs  router.rs  server.rs  types.rs
src/error_handler/: buffer.rs  buffer_impl.rs  dbclient.rs  handler.rs  logger.rs  mod.rs  safe_writer.rs  types.rs  writer.rs
tests/: api_connector.rs  api_connector_integration.rs  errorhandler.rs  errorhandler_API.rs  pipeline_test.rs
