[package]
name = "file_processor_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.9", features = ["transport"] }
tonic-build = "0.9"
rustls = "0.21"
tokio-rustls = "0.23"

aes = "0.8"
zstd = "0.12"
blake3 = "1.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
mockall = "0.13.1"