[package]
name = "file_processor_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "2.0.12"
mockall = "0.13.1"
sqlx = "0.8.5"
uuid = { version = "1.16.0", features = ["v4"] }
async-trait = "0.1.88"