[package]
name = "file_processor_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "2.0.12"
mockall = "0.13.1"
sqlx = "0.8.5"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
async-trait = "0.1.88"
tracing = "0.1.41"
chrono = { version = "0.4.41", features = ["serde"] }
lettre = { version = "0.11.4", features = ["tokio1", "builder", "smtp-transport"] }